...
    <string name="profile">Profile</string>
    <string name="currency">Currency</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="invalid_login">Invalid login credentials</string>
    <string name="user_exists">User already exists!</string>
    <string name="user_age">You must be over 18 yeard old to register</string>
    <string name="user_gender">You must choose your gender</string>

    <string name="add_to_cart_button">Add to cart</string>
    <string name="beer_quantity">Quantity: </string>
    <string name="confirm_order">Confirm order</string>
    <string name="increase_quantity">Increase quantity</string>
    <string name="decrease_quantity">Decrease quantity</string>
...
